--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -4,34 +4,40 @@
 }
 
 .sidenav {
-    height: 100%;
-    width: 300px;
+    height: auto;
+    width: 100%;
     position: fixed;
     z-index: 1;
     top: 0;
     left: 0;
     background-color: #A4C3B2;
     overflow-x: hidden;
-    padding-top: 30px
-
+    padding-top: 1.5em;
 }
 
 .sidenav a {
-    padding: 4px 6px 4px 12px;
-    font-size: 20px;
+    padding: 0.25em 0.75em 0.25em 0.75em;
+    font-size: 1.25em;
     color: white;
     display: block;
-    text-decoration: none
+    text-decoration: none;
+    float: right;
 }
 
+
+
 .main {
-    margin-left: 300px;
-    padding: 0px 10px;
     background-color: #F6FFF8;
 }
 
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Palatino', sans-serif;
+    padding: 4em 4em 1em 4em;
+    font-size:20px;
+}
+
+a {
+    text-decoration: none;
 }
 
 .game {
@@ -56,21 +62,3 @@ body {
   display: table;
 } 
 
-/* On screens that are less than 700px wide, make the sidebar into a topbar */
-@media screen and (max-width: 700px) {
-  .sidebar {
-    width: 100%;
-    height: auto;
-    position: relative;
-  }
-  .sidebar a {float: left;}
-  div.content {margin-left: 0;}
-}
-
-/* On screens that are less than 400px, display the bar vertically, instead of horizontally */
-@media screen and (max-width: 400px) {
-  .sidebar a {
-    text-align: center;
-    float: none;
-  }
-}
