--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,13 +8,19 @@
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="/assets/css/styles.css">
     <script>
-        MathJax = {
-          tex: {
-            inlineMath: {'[+]': [['$', '$']]}
-          }
-        };
-    </script>
-    <script defer src="https://cdn.jsdelivr.net/npm/mathjax@4/tex-chtml.js"></script>
+MathJax = {
+  tex: {
+    inlineMath: [ ['$', '$'], ['\\(', '\\)'] ]
+  },
+  svg: {
+    fontCache: 'global'
+  }
+};
+</script>
+<script
+  type="text/javascript" id="MathJax-script" async
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js">
+</script>
   </head>
   <nav>
     <div class="sidenav">
